--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -234,8 +234,8 @@ width: 100%;
 border-radius: 8px;
 align-self: center;
 justify-content: center;
-display: flex;
-flex-direction: column;
+/* display: flex;
+flex-direction: column; */
 color: var(--text-dark); 
 }
 
@@ -251,12 +251,10 @@ color: var(--text-dark);
 
 .contact_title{
   display: flex;
-  justify-content: space-between; 
-  justify-content: flex-end;
+  justify-content: space-between;  
   padding: 5px;
   margin: 0,auto; 
-  margin-top:4px;
-  object-fit:cover;  
+  margin-top:4px; 
 }
 
 .contact_me h2{
@@ -276,4 +274,8 @@ color: var(--text-dark);
     gap: 0;
     margin: 0;
   }
+  .text_contact ul { 
+    display: block; 
+    color: var(--text-dark); 
+    }
 }
